feature/DTS-47967-defects-breached-sla-kpi fix Sonar issues